Revise README for improved clarity and detail
Updated the README to enhance clarity and detail about the Deadlock Simulator application, including features, requirements, and installation instructions.